# ix-design-mcp

./: .coveragerc  .env.README.md  .env.unified  .env.windows  .env.wsl  .gitignore  .mcp.json.example  .pre-commit-config.yaml  AI_SYSTEM_PROMPT.md  API_REFERENCE.md  BREAKTHROUGH_BUG_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CURRENT_TASK.md  ENHANCEMENTS.md  FALLBACK_ANALYSIS.md  LICENSE  MCP_TIMEOUT_CONFIG.md  NEXT_STEPS.md  PHREEQC_OPTIMIZATION_VALIDATION.md  PRODUCTION_PHREEQC_COMPONENTS.md  README.md  SETUP.md  THEORETICAL_BV_CORRECTED.md  check_encoding.py  codex_next_steps.md  debug_phreeqc_input.txt  failed_wac_h.pqi  pyproject.toml  pytest.ini  requirements.txt  resin_database.yaml  selected_output_1.sel  server.py  test_standard_x.pqi  test_wac_h.pqi  test_wac_h_fixed.pqi  test_wac_h_fixed.pqo  test_wac_h_simple.pqi  test_wac_h_simple.pqo  (+3 more)
.claude/agents/: codebase-janitor.md  dev-manager-process-eng.md  process-engineering-expert.md  test-writer-integrity.md
.claude/commands/: codex-opinion.md
.codex/: config.toml  history.jsonl
.github/workflows/: ix-tests.yml
archive/: AI_SYSTEM_PROMPT.md  ENHANCED_MODEL_DEBUG_REPORT.md  FINAL_STATUS_REPORT.md  GRAYBOX_INTEGRATION_GUIDE.md  MCP_CLIENT_GUIDE.md  MCP_CLIENT_TESTING.md  PHREEQC_GRAYBOX_IMPLEMENTATION.md  PROCESS_ISOLATION_IMPLEMENTATION.md  PRODUCTION_READINESS_FINAL.md  README.md  TEST_PROTOCOL_FOR_SWE.md  add_pressure_fix_to_notebook.py  fix_ion_exchange_mass_balance.patch  minimal_patch_fix.py
archive/debug_scripts/: archive_inactive_files.py  calculate_test_theoretical_bv.py  example_wac_simulation.py  fix_dof_issue.py  fix_dof_properly.py  investigate_breakthrough_calculation.py  ix_cli.py  resin_properties.py  run_sac_complete.py  show_actual_bv_progression.py  show_bv_data.py  verify_flush_hypothesis.py  (+1 more)
data/: resin_parameters.json
databases/: .gitkeep  resin_parameters.json  resin_selectivity.json
docs/: EMPIRICAL_OVERLAY_GUIDE.md  IX_GRAYBOX_MIGRATION_GUIDE.md  TECHNICAL_DETAILS.md  TRANSPORT_usage_guide.md  WAC_H_Form_Implementation_Analysis.md  WAC_H_SIMULATION_ISSUES.md  WAC_SURFACE_MODEL.md  dependency_research_deepwiki.md  effluent_quality_analysis.md  hanging_fix_and_plotting_options.md  kinetic_model_guide.md  mcp_server_fixes.md  modeling_philosophy.md  na_wac_phreeqc_modeling.md  phreeqc_exchange_configuration_guide.md  phreeqpython_tool_guide.md  physical_modeling_factors.md  resolution_independent_bv.md  resolution_standardization.md  three_tool_architecture.md
examples/: example_usage.py  sample_request.json
notebooks/: README.md  ix_simulation_cli_wrapper.ipynb  ix_simulation_general_template.ipynb  ix_simulation_graybox_template.ipynb  ix_simulation_hwac_template.ipynb  ix_simulation_nawac_template.ipynb  ix_simulation_sac_template.ipynb  sac_breakthrough_analysis.ipynb  sac_engineering_report.txt
phreeqc_pse/: __init__.py
temp_wac_debug/: debug_input.phr
test_outputs/: sodium_extended_0Na.tsv  sodium_extended_1000Na.tsv
test_results/: wac_exchange_input.pqi  wac_surface_input.pqi
tests/: __init__.py  conftest.py  run_all_wac_tests.py  run_with_timeout.py  test_batch_equilibrium.py  test_charge_balance.py  test_configurator_integration.py  test_dvb_breakthrough_comparison.py  test_dvb_optimized_conditions.py  test_dvb_simple_high_na.py  test_dvb_varied_waters.py  test_dvb_with_reload.py  test_equilibrium_leakage.py  test_fallback_selectivity.py  test_hydraulics.py  test_ix_economics.py  test_mcp_server_integration.py  test_mock_phreeqc.py  test_multicomponent_selectivity.py  test_parametrized_water_compositions.py  test_phase4_mcp_configuration.py  test_phase4_mcp_simulation.py  test_pitzer_database.py  test_report_generation.py  test_wac_h_henderson_hasselbalch.py  test_with_temp_files.py  verify_plot_fix_success.py  visualize_chromatographic_behavior.py  wac_na_debug_input.pqi
tests/debug/: wac_na_test.pqi  (+1 more)
tools/: __init__.py  base_ix_simulation.py  breakthrough_calculator.py  breakthrough_plotting.py  capacity_derating.py  core_config.py  empirical_leakage_overlay.py  enhanced_phreeqc_generator.py  equilibrium_leakage.py  exceptions.py  fix_selectivity_database.py  hydraulics.py  ix_configuration.py  ix_direct_phreeqc_simulation.py  ix_economics.py  ix_phreeqpython_simulation.py  ix_report_generator.py  ix_simulate.py  ix_simulation.py  ix_simulation_direct.py  knowledge_based_config.py  mcp_types.py  notebook_runner.py  regeneration_strategies.py  sac_configuration.py  sac_simulation.py  schemas.py  selectivity_coefficients.py  simulate_ix_hybrid.py  unit_conversions.py  wac_configuration.py  wac_enhanced_species.py  wac_simulation.py  wac_surface_builder.py
utils/: artifacts.py  ix_watertap_wrapper.py  job_manager.py  process_isolation.py  schemas.py  simulate_ix_cli.py  watertap_worker.py
watertap_ix_transport/: __init__.py  degasser_tower_0D_phreeqc_final.py  ion_exchange_transport_0D.py  ion_exchange_transport_0D_backup.py  ion_exchange_transport_0D_enhanced.py  ion_exchange_transport_0D_graybox.py  ion_exchange_transport_0D_graybox_integrated.py  ix_flowsheet_builder.py  ix_initialization.py  ix_wrapper.py  phreeqc_translator.py  production_models.py  species_alias.py
(+166 files in other folders)
